@@ -6,10 +6,35 @@
  */
 package com.powsybl.sld.cgmes.layout;
 
-import com.powsybl.iidm.network.*;
-import com.powsybl.sld.cgmes.dl.iidm.extensions.*;
+import com.powsybl.iidm.network.Bus;
+import com.powsybl.iidm.network.BusbarSection;
+import com.powsybl.iidm.network.BoundaryLine;
+import com.powsybl.iidm.network.Generator;
+import com.powsybl.iidm.network.Line;
+import com.powsybl.iidm.network.Load;
+import com.powsybl.iidm.network.Network;
+import com.powsybl.iidm.network.ShuntCompensator;
+import com.powsybl.iidm.network.StaticVarCompensator;
+import com.powsybl.iidm.network.Switch;
+import com.powsybl.iidm.network.ThreeWindingsTransformer;
+import com.powsybl.iidm.network.TopologyKind;
+import com.powsybl.iidm.network.TwoWindingsTransformer;
+import com.powsybl.iidm.network.VoltageLevel;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.CouplingDeviceDiagramData;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.DiagramPoint;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.InjectionDiagramData;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.LineDiagramData;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.NetworkDiagramData;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.NodeDiagramData;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.ThreeWindingsTransformerDiagramData;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.VoltageLevelDiagramData;
 import com.powsybl.sld.layout.Layout;
+import com.powsybl.sld.layout.LayoutParameters;
 import com.powsybl.sld.model.coordinate.Orientation;
+import com.powsybl.sld.model.coordinate.Point;
+import com.powsybl.sld.model.graphs.AbstractGraph;
+import com.powsybl.sld.model.graphs.BaseGraph;
+import com.powsybl.sld.model.graphs.SubstationGraph;
 import com.powsybl.sld.model.graphs.VoltageLevelGraph;
 import com.powsybl.sld.model.nodes.*;
 import com.powsybl.sld.model.nodes.Node.NodeType;
@@ -32,25 +57,39 @@ public abstract class AbstractCgmesLayout implements Layout {
 
     private static final Logger LOG = LoggerFactory.getLogger(AbstractCgmesLayout.class);
 
-    protected static final double X_MARGIN = 20;
-    protected static final double Y_MARGIN = 10;
     protected static final double LINE_OFFSET = 20;
+    protected static final double DEFAULT_CGMES_SCALE_FACTOR = 3.0;
 
-    protected double minX = 0;
-    protected double minY = 0;
+    protected double minX = Double.MAX_VALUE;
+    protected double minY = Double.MAX_VALUE;
+    protected double maxX = Double.MIN_VALUE;
+    protected double maxY = Double.MIN_VALUE;
     protected boolean rotatedBus = false;
     protected boolean isNodeBreaker = true;
     protected boolean fixTransformersLabel = false;
 
-    protected Network network;
+    protected final Network network;
+    protected final String cgmesDiagramName;
+    protected final double cgmesScaleFactor;
 
-    protected void setMin(double x, double y) {
-        if (minX == 0 || x < minX) {
-            minX = x;
-        }
-        if (minY == 0 || y < minY) {
-            minY = y;
-        }
+    protected AbstractCgmesLayout(Network network, String cgmesDiagramName, double cgmesScaleFactor) {
+        this.network = Objects.requireNonNull(network);
+        this.cgmesDiagramName = cgmesDiagramName != null ? cgmesDiagramName : getFirstCgmesDiagramName(network);
+        this.cgmesScaleFactor = cgmesScaleFactor;
+    }
+
+    private String getFirstCgmesDiagramName(Network network) {
+        List<String> names = NetworkDiagramData.getDiagramsNames(network);
+        return !names.isEmpty() ? names.getFirst() : null;
+    }
+
+    protected void setMinMax(DiagramPoint diagramPoint) {
+        double x = diagramPoint.x();
+        double y = diagramPoint.y();
+        minX = Math.min(x, minX);
+        minY = Math.min(y, minY);
+        maxX = Math.max(x, maxX);
+        maxY = Math.max(y, maxY);
     }
 
     protected VoltageLevelGraph removeFictitiousNodes(VoltageLevelGraph graph, VoltageLevel vl) {
@@ -59,34 +98,34 @@ public abstract class AbstractCgmesLayout implements Layout {
         return graph;
     }
 
-    protected boolean checkDiagram(String diagramName, String equipment) {
+    protected boolean checkDiagramFails(String diagramName, String equipment) {
         if (diagramName == null) {
             LOG.warn("layout parameter diagramName not set: CGMES-DL layout will not be applied");
-            return false;
+            return true;
         }
         if (!NetworkDiagramData.containsDiagramName(network, diagramName)) {
             LOG.warn("diagram name {} not found in network: CGMES-DL layout will not be applied to network {}, {}", diagramName, network.getId(), equipment);
-            return false;
+            return true;
         }
-        return true;
+        return false;
     }
 
-    protected void setNodeCoordinates(VoltageLevel vl, VoltageLevelGraph graph, String diagramName, boolean useNames) {
+    protected void setNodeCoordinates(VoltageLevel vl, VoltageLevelGraph graph, String diagramName) {
         isNodeBreaker = TopologyKind.NODE_BREAKER.equals(vl.getTopologyKind());
         // skip line nodes: I need the coordinates of the adjacent node to know which side of the line belongs to this voltage level
-        graph.getNodes().stream().filter(node -> !isLineNode(node)).forEach(node -> setNodeCoordinates(vl, node, diagramName, useNames));
+        graph.getNodes().stream().filter(node -> !isLineNode(node)).forEach(node -> setNodeCoordinates(vl, node, diagramName));
         // set line nodes coordinates: I use the coordinates of the adjacent node to know which side of the line belongs to this voltage level
         graph.getNodes().stream().filter(this::isLineNode).forEach(node -> setLineNodeCoordinates(vl, node, diagramName));
     }
 
     protected boolean isLineNode(Node node) {
-        return Arrays.asList(LINE, DANGLING_LINE, VSC_CONVERTER_STATION, LCC_CONVERTER_STATION).contains(node.getComponentType());
+        return Arrays.asList(LINE, BOUNDARY_LINE, VSC_CONVERTER_STATION, LCC_CONVERTER_STATION).contains(node.getComponentType());
     }
 
-    protected void setNodeCoordinates(VoltageLevel vl, Node node, String diagramName, boolean useNames) {
-        LOG.info("Setting coordinates of node {}, type {}, component type {}", node.getId(), node.getType(), node.getComponentType());
+    protected void setNodeCoordinates(VoltageLevel vl, Node node, String diagramName) {
+        logSettingCoordinates(node);
         switch (node.getType()) {
-            case BUS:
+            case BUS -> {
                 BusNode busNode = (BusNode) node;
                 if (TopologyKind.NODE_BREAKER.equals(vl.getTopologyKind())) {
                     BusbarSection busbar = vl.getConnectable(busNode.getId(), BusbarSection.class);
@@ -97,21 +136,17 @@ public abstract class AbstractCgmesLayout implements Layout {
                     NodeDiagramData<Bus> busDiagramData = bus != null ? bus.getExtension(NodeDiagramData.class) : null;
                     setBusNodeCoordinates(busNode, busDiagramData, diagramName);
                 }
-                break;
-            case SWITCH:
+            }
+            case SWITCH -> {
                 SwitchNode switchNode = (SwitchNode) node;
                 Switch sw = TopologyKind.NODE_BREAKER.equals(vl.getTopologyKind()) ?
                             vl.getNodeBreakerView().getSwitch(switchNode.getId()) :
                             vl.getBusBreakerView().getSwitch(switchNode.getId());
                 CouplingDeviceDiagramData<Switch> switchDiagramData = sw != null ? sw.getExtension(CouplingDeviceDiagramData.class) : null;
-                setCouplingDeviceNodeCoordinates(switchNode, switchDiagramData, true, diagramName);
-                break;
-            case FEEDER:
-                setFeederNodeCoordinates(vl, node, diagramName, useNames);
-                break;
-            default:
-                processDefaultNodeCase(vl, node, diagramName);
-                break;
+                setCouplingDeviceNodeCoordinates(switchNode, switchDiagramData, diagramName);
+            }
+            case FEEDER -> setFeederNodeCoordinates(vl, node, diagramName);
+            default -> processDefaultNodeCase(vl, node, diagramName);
         }
     }
 
@@ -122,8 +157,8 @@ public abstract class AbstractCgmesLayout implements Layout {
             if (iidmEquivalentNode.isPresent()) {
                 DiagramPoint nodePoint = VoltageLevelDiagramData.getInternalNodeDiagramPoint(vl, diagramName, iidmEquivalentNode.get());
                 if (nodePoint != null) {
-                    node.setX(nodePoint.getX());
-                    node.setY(nodePoint.getY());
+                    node.setX(nodePoint.x());
+                    node.setY(nodePoint.y());
                     return;
                 }
             }
@@ -158,14 +193,15 @@ public abstract class AbstractCgmesLayout implements Layout {
 
     protected void setBusNodeCoordinates(BusNode node, NodeDiagramData<?> diagramData, String diagramName) {
         if (diagramData != null) {
-            NodeDiagramData<?>.NodeDiagramDataDetails diagramDetails = diagramData.getData(diagramName);
+            NodeDiagramData.NodeDiagramDataDetails diagramDetails = diagramData.getData(diagramName);
             if (diagramDetails != null) {
-                node.setX(diagramDetails.getPoint1().getX());
-                node.setY(diagramDetails.getPoint1().getY());
+                node.setX(diagramDetails.getPoint1().x());
+                node.setY(diagramDetails.getPoint1().y());
                 node.setPxWidth(computeBusWidth(diagramDetails));
-                rotatedBus = diagramDetails.getPoint1().getX() == diagramDetails.getPoint2().getX();
+                rotatedBus = diagramDetails.getPoint1().x() == diagramDetails.getPoint2().x();
                 node.setOrientation(rotatedBus ? Orientation.UP : Orientation.RIGHT);
-                setMin(diagramDetails.getPoint1().getX(), diagramDetails.getPoint1().getY());
+                setMinMax(diagramDetails.getPoint1());
+                setMinMax(diagramDetails.getPoint2());
             } else {
                 LOG.warn("No CGMES-DL data for {} node {}, bus {}, diagramName {}", node.getType(), node.getId(), node.getName(), diagramName);
             }
@@ -174,14 +210,14 @@ public abstract class AbstractCgmesLayout implements Layout {
         }
     }
 
-    protected void setCouplingDeviceNodeCoordinates(EquipmentNode node, CouplingDeviceDiagramData<?> diagramData, boolean rotate, String diagramName) {
+    protected void setCouplingDeviceNodeCoordinates(EquipmentNode node, CouplingDeviceDiagramData<?> diagramData, String diagramName) {
         if (diagramData != null) {
-            CouplingDeviceDiagramData<?>.CouplingDeviceDiagramDetails diagramDetails = diagramData.getData(diagramName);
+            CouplingDeviceDiagramData.CouplingDeviceDiagramDetails diagramDetails = diagramData.getData(diagramName);
             if (diagramDetails != null) {
-                node.setX(diagramDetails.getPoint().getX());
-                node.setY(diagramDetails.getPoint().getY());
-                setOrientation(node, rotate, diagramDetails.getRotation());
-                setMin(diagramDetails.getPoint().getX(), diagramDetails.getPoint().getY());
+                node.setX(diagramDetails.getPoint().x());
+                node.setY(diagramDetails.getPoint().y());
+                setOrientation(node, true, diagramDetails.getRotation());
+                setMinMax(diagramDetails.getPoint());
             } else {
                 LOG.warn("No CGMES-DL data for {} node {}, name {}, diagramName {}", node.getType(), node.getId(), node.getName(), diagramName);
             }
@@ -191,15 +227,15 @@ public abstract class AbstractCgmesLayout implements Layout {
         }
     }
 
-    protected double computeBusWidth(NodeDiagramData<?>.NodeDiagramDataDetails diagramData) {
-        if (diagramData.getPoint1().getX() == diagramData.getPoint2().getX()) {
-            return Math.abs(diagramData.getPoint1().getY() - diagramData.getPoint2().getY());
+    protected double computeBusWidth(NodeDiagramData.NodeDiagramDataDetails diagramData) {
+        if (diagramData.getPoint1().x() == diagramData.getPoint2().x()) {
+            return Math.abs(diagramData.getPoint1().y() - diagramData.getPoint2().y());
         } else {
-            return Math.abs(diagramData.getPoint1().getX() - diagramData.getPoint2().getX());
+            return Math.abs(diagramData.getPoint1().x() - diagramData.getPoint2().x());
         }
     }
 
-    protected void setFeederNodeCoordinates(VoltageLevel vl, Node node, String diagramName, boolean useNames) {
+    protected void setFeederNodeCoordinates(VoltageLevel vl, Node node, String diagramName) {
         switch (node.getComponentType()) {
             case LOAD:
                 FeederNode loadNode = (FeederNode) node;
@@ -241,9 +277,8 @@ public abstract class AbstractCgmesLayout implements Layout {
                 CouplingDeviceDiagramData<TwoWindingsTransformer> transformerDiagramData = null;
                 if (transformer != null) {
                     transformerDiagramData = transformer.getExtension(CouplingDeviceDiagramData.class);
-                    setTransformersLabel(transformerNode, useNames, transformer.getNameOrId(), transformer.getId());
                 }
-                setCouplingDeviceNodeCoordinates(transformerNode, transformerDiagramData, false, diagramName);
+                setCouplingDeviceNodeCoordinates(transformerNode, transformerDiagramData, diagramName);
                 break;
             case THREE_WINDINGS_TRANSFORMER, THREE_WINDINGS_TRANSFORMER_LEG, THREE_WINDINGS_TRANSFORMER_PST_1,
                     THREE_WINDINGS_TRANSFORMER_PST_2, THREE_WINDINGS_TRANSFORMER_PST_3,
@@ -254,7 +289,6 @@ public abstract class AbstractCgmesLayout implements Layout {
                 ThreeWindingsTransformerDiagramData transformer3wDiagramData = null;
                 if (transformer3w != null) {
                     transformer3wDiagramData = transformer3w.getExtension(ThreeWindingsTransformerDiagramData.class);
-                    setTransformersLabel(transformer3wNode, useNames, transformer3w.getNameOrId(), transformer3w.getId());
                 }
                 setThreeWindingsTransformerNodeCoordinates(transformer3wNode, transformer3wDiagramData, diagramName);
                 break;
@@ -272,12 +306,12 @@ public abstract class AbstractCgmesLayout implements Layout {
 
     protected void setInjectionNodeCoordinates(FeederNode node, InjectionDiagramData<?> diagramData, boolean rotate, String diagramName) {
         if (diagramData != null) {
-            InjectionDiagramData<?>.InjectionDiagramDetails diagramDetails = diagramData.getData(diagramName);
+            InjectionDiagramData.InjectionDiagramDetails diagramDetails = diagramData.getData(diagramName);
             if (diagramDetails != null) {
-                node.setX(diagramDetails.getPoint().getX());
-                node.setY(diagramDetails.getPoint().getY());
+                node.setX(diagramDetails.getPoint().x());
+                node.setY(diagramDetails.getPoint().y());
                 setOrientation(node, rotate, diagramDetails.getRotation());
-                setMin(diagramDetails.getPoint().getX(), diagramDetails.getPoint().getY());
+                setMinMax(diagramDetails.getPoint());
             } else {
                 LOG.warn("No CGMES-DL data for {} {} node {}, injection {}, diagramName {}", node.getType(), node.getComponentType(), node.getId(), node.getName(), diagramName);
             }
@@ -303,9 +337,10 @@ public abstract class AbstractCgmesLayout implements Layout {
         if (diagramData != null) {
             ThreeWindingsTransformerDiagramData.ThreeWindingsTransformerDiagramDataDetails diagramDetails = diagramData.getData(diagramName);
             if (diagramDetails != null) {
-                node.setX(diagramDetails.getPoint().getX());
-                node.setY(diagramDetails.getPoint().getY());
-                setMin(diagramDetails.getPoint().getX(), diagramDetails.getPoint().getY());
+                node.setX(diagramDetails.getPoint().x());
+                node.setY(diagramDetails.getPoint().y());
+                setOrientation(node, true, diagramDetails.getRotation());
+                setMinMax(diagramDetails.getPoint());
             } else {
                 LOG.warn("No CGMES-DL data for {} {} node {}, transformer {}, diagramName {}", node.getType(), node.getComponentType(), node.getId(), node.getName(), diagramName);
             }
@@ -315,7 +350,7 @@ public abstract class AbstractCgmesLayout implements Layout {
     }
 
     protected void setLineNodeCoordinates(VoltageLevel vl, Node node, String diagramName) {
-        LOG.info("Setting coordinates of node {}, type {}, component type {}", node.getId(), node.getType(), node.getComponentType());
+        logSettingCoordinates(node);
         switch (node.getComponentType()) {
             case LINE:
                 FeederNode lineNode = (FeederNode) node;
@@ -323,11 +358,11 @@ public abstract class AbstractCgmesLayout implements Layout {
                 LineDiagramData<Line> lineDiagramData = line != null ? line.getExtension(LineDiagramData.class) : null;
                 setLineNodeCoordinates(lineNode, lineDiagramData, diagramName);
                 break;
-            case DANGLING_LINE:
-                FeederNode danglingLineNode = (FeederNode) node;
-                DanglingLine danglingLine = vl.getConnectable(danglingLineNode.getId(), DanglingLine.class);
-                LineDiagramData<DanglingLine> danglingLineDiagramData = danglingLine != null ? danglingLine.getExtension(LineDiagramData.class) : null;
-                setLineNodeCoordinates(danglingLineNode, danglingLineDiagramData, diagramName);
+            case BOUNDARY_LINE:
+                FeederNode boundaryLineNode = (FeederNode) node;
+                BoundaryLine boundaryLine = vl.getConnectable(boundaryLineNode.getId(), BoundaryLine.class);
+                LineDiagramData<BoundaryLine> boundaryLineDiagramData = boundaryLine != null ? boundaryLine.getExtension(LineDiagramData.class) : null;
+                setLineNodeCoordinates(boundaryLineNode, boundaryLineDiagramData, diagramName);
                 break;
             default:
                 break;
@@ -338,10 +373,10 @@ public abstract class AbstractCgmesLayout implements Layout {
         if (diagramData != null) {
             if (diagramData.getDiagramsNames().contains(diagramName)) {
                 DiagramPoint linePoint = getLinePoint(diagramData, node, diagramName);
-                node.setX(linePoint.getX());
-                node.setY(linePoint.getY());
+                node.setX(linePoint.x());
+                node.setY(linePoint.y());
                 node.setOrientation(rotatedBus ? Orientation.RIGHT : Orientation.UP);
-                setMin(linePoint.getX(), linePoint.getY());
+                setMinMax(linePoint);
             } else {
                 LOG.warn("No CGMES-DL data for {} {} node {}, line {}, diagramName {}", node.getType(), node.getComponentType(), node.getId(), node.getName(), diagramName);
             }
@@ -355,10 +390,10 @@ public abstract class AbstractCgmesLayout implements Layout {
         if (adjacentNodePoint == null) {
             return getLinePoint(lineDiagramData, true, diagramName);
         }
-        double firstPointDistance = Math.hypot(lineDiagramData.getFirstPoint(diagramName).getX() - adjacentNodePoint.getX(),
-                lineDiagramData.getFirstPoint(diagramName).getY() - adjacentNodePoint.getY());
-        double lastPointDistance = Math.hypot(lineDiagramData.getLastPoint(diagramName).getX() - adjacentNodePoint.getX(),
-                lineDiagramData.getLastPoint(diagramName).getY() - adjacentNodePoint.getY());
+        double firstPointDistance = Math.hypot(lineDiagramData.getFirstPoint(diagramName).x() - adjacentNodePoint.x(),
+                lineDiagramData.getFirstPoint(diagramName).y() - adjacentNodePoint.y());
+        double lastPointDistance = Math.hypot(lineDiagramData.getLastPoint(diagramName).x() - adjacentNodePoint.x(),
+                lineDiagramData.getLastPoint(diagramName).y() - adjacentNodePoint.y());
         return getLinePoint(lineDiagramData, firstPointDistance > lastPointDistance, diagramName);
     }
 
@@ -367,7 +402,7 @@ public abstract class AbstractCgmesLayout implements Layout {
         if (adjacentNodes == null || adjacentNodes.isEmpty()) {
             return null;
         }
-        Node adjacentNode = adjacentNodes.get(0); // as we are working on a single voltage level a line node should be connected to only 1 node
+        Node adjacentNode = adjacentNodes.getFirst(); // as we are working on a single voltage level a line node should be connected to only 1 node
         // a line should not be connected to another line, so I should already have the coordinates of the adjacent node
         return new DiagramPoint(adjacentNode.getX(), adjacentNode.getY(), 0);
     }
@@ -379,40 +414,28 @@ public abstract class AbstractCgmesLayout implements Layout {
         return isLastPointCloser ? lineDiagramData.getLastPoint(diagramName, LINE_OFFSET) : lineDiagramData.getFirstPoint(diagramName, LINE_OFFSET);
     }
 
-    protected void shiftNodeCoordinates(Node node, double scaleFactor) {
-        node.setX(node.getX() - minX + (X_MARGIN / scaleFactor));
-        node.setY(node.getY() - minY + (Y_MARGIN / scaleFactor));
-    }
-
-    protected void scaleNodeCoordinates(Node node, double scaleFactor) {
-        node.setX(node.getX() * scaleFactor);
-        node.setY(node.getY() * scaleFactor);
+    protected void shiftAndScaleNodeCoordinates(Node node, double scaleFactor) {
+        node.setX((node.getX() - minX) * scaleFactor);
+        node.setY((node.getY() - minY) * scaleFactor);
         if (node.getType() == NodeType.BUS) {
             BusNode nodeBus = (BusNode) node;
             nodeBus.setPxWidth(nodeBus.getPxWidth() * scaleFactor);
         }
     }
 
-    protected void setVoltageLevelCoord(VoltageLevelGraph vlGraph) {
-        double minNodeX = vlGraph.getNodes().stream().mapToDouble(Node::getX).min().orElse(0);
-        double minNodeY = vlGraph.getNodes().stream().mapToDouble(Node::getY).min().orElse(0);
-        vlGraph.setCoord(minNodeX, minNodeY);
-    }
-
     public static void removeFictitiousSwitchNodes(VoltageLevelGraph graph, VoltageLevel vl) {
-        List<SwitchNode> fictitiousSwithcNodesToRemove = graph.getNodes().stream()
+        graph.getNodes().stream()
                 .filter(SwitchNode.class::isInstance)
                 .map(SwitchNode.class::cast)
                 .filter(node -> isFictitiousSwitchNode(node, vl))
                 .filter(node -> node.getAdjacentNodes().size() == 2)
-                .collect(Collectors.toList());
-        for (SwitchNode n : fictitiousSwithcNodesToRemove) {
-            Node node1 = n.getAdjacentNodes().get(0);
-            Node node2 = n.getAdjacentNodes().get(1);
-            LOG.info("Remove fictitious switch node {} between {} and {}", n.getName(), node1.getId(), node2.getId());
-            graph.removeNode(n);
-            graph.addEdge(node1, node2);
-        }
+                .forEach(n -> {
+                    Node node1 = n.getAdjacentNodes().get(0);
+                    Node node2 = n.getAdjacentNodes().get(1);
+                    LOG.info("Remove fictitious switch node {} between {} and {}", n.getName(), node1.getId(), node2.getId());
+                    graph.removeNode(n);
+                    graph.addEdge(node1, node2);
+                });
     }
 
     private static boolean isFictitiousSwitchNode(Node node, VoltageLevel vl) {
@@ -420,5 +443,55 @@ public abstract class AbstractCgmesLayout implements Layout {
                 vl.getNodeBreakerView().getSwitch(node.getId()) :
                 vl.getBusBreakerView().getSwitch(node.getId());
         return sw == null || sw.isFictitious();
+    }
+
+    protected void setGraphSize(AbstractGraph graph, LayoutParameters layoutParam) {
+        double widthWithoutPadding = maxX - minX;
+        double heightWithoutPadding = maxY - minY;
+
+        LayoutParameters.Padding padding = layoutParam.getVoltageLevelPadding();
+        double width = widthWithoutPadding * cgmesScaleFactor + padding.left() + padding.right();
+        double height = heightWithoutPadding * cgmesScaleFactor + padding.top() + padding.bottom();
+
+        graph.setSize(width, height);
+    }
+
+    protected void setMultiNodesCoord(SubstationGraph substationGraph) {
+        for (MiddleTwtNode multiNode : substationGraph.getMultiTermNodes()) {
+            var node = multiNode.getAdjacentNodes().getFirst();
+            var multiNodeCoord = getCoordinatesInDiagram(node, substationGraph);
+            multiNode.setCoordinates(multiNodeCoord);
+            List<List<Point>> snakeLines = multiNode.getAdjacentEdges().stream()
+                    .map(e -> getSnakeLine(e, multiNode, substationGraph))
+                    .toList();
+            multiNode.setOrientationFromSnakeLines(snakeLines);
+        }
+    }
+
+    private List<Point> getSnakeLine(Edge e, Node node, BaseGraph graph) {
+        var oppositeNode = e.getOppositeNode(node);
+        if (!getCoordinatesInDiagram(oppositeNode, graph).equals(node.getCoordinates())) {
+            return List.of(getCoordinatesInDiagram(oppositeNode, graph), node.getCoordinates());
+        }
+        var adjacentNodes = oppositeNode.getAdjacentNodes();
+        var nextNode = adjacentNodes.getFirst() == node ? adjacentNodes.get(1) : adjacentNodes.getFirst();
+        Point nextNodeCoord = getCoordinatesInDiagram(nextNode, graph);
+        if (nextNode instanceof BusNode) {
+            if (nextNode.getOrientation() == Orientation.UP) {
+                nextNodeCoord.setY(node.getCoordinates().getY());
+            } else {
+                nextNodeCoord.setX(node.getCoordinates().getX());
+            }
+        }
+        return List.of(nextNodeCoord, node.getCoordinates());
+    }
+
+    private Point getCoordinatesInDiagram(Node node, BaseGraph graph) {
+        var vlGraph = graph.getVoltageLevelGraph(node);
+        return vlGraph.getCoord().getShiftedPoint(node.getCoordinates());
+    }
+
+    private void logSettingCoordinates(Node node) {
+        LOG.info("Setting coordinates of node {}, type {}, component type {}", node.getId(), node.getType(), node.getComponentType());
     }
 }
